--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-scrollable-anchor": "^0.4.1"
+    "react-scrollable-anchor": "^0.4.1",
+    "semantic-ui-react": "^0.64.8"
   },
   "scripts": {
     "start": "react-scripts start",
