--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-scrollable-anchor": "^0.4.1",
+    "semantic-ui-css": "^2.2.4",
     "semantic-ui-react": "^0.64.8"
   },
   "scripts": {
