--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "1-liners": "^0.4.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-hammerjs": "^0.5.0",
+    "react-motion": "^0.4.7",
     "react-scrollable-anchor": "^0.4.1",
-    "semantic-ui-css": "^2.2.4",
-    "semantic-ui-react": "^0.64.8"
+    "react-simple-sidenav": "^0.1.5",
+    "rebass": "^0.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
