--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "1-liners": "^0.4.0",
+    "gh-pages": "^0.12.0",
     "google-map-react": "^0.22.3",
     "normalize.css": "^5.0.0",
     "react": "^15.4.2",
@@ -25,10 +26,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "standard": {
     "parser": "babel-eslint"
   },
-  "homepage": "http://zelphir.github.io/docs"
+  "homepage": "http://zelphir.github.io"
 }
