--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
   "standard": {
     "parser": "babel-eslint"
   },
-  "homepage": "http://zelphir.github.io"
+  "homepage": "https://robandisa.party"
 }
