--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "react-match-media": "^2.0.1",
     "react-modal": "^1.6.5",
     "react-motion": "^0.4.7",
+    "react-redux": "^5.0.2",
+    "react-redux-multilingual": "^1.0.2",
     "react-scroll-up": "^1.2.1",
-    "react-scrollable-anchor": "^0.4.1",
     "react-simple-sidenav": "^0.1.5",
     "react-slick": "0.14.2",
     "react-svg": "^2.1.19",
     "react-youtube": "^7.3.0",
-    "rebass": "^0.3.4"
+    "rebass": "^0.3.4",
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
