--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "normalize.css": "^5.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-ga": "^2.1.2",
     "react-hammerjs": "^0.5.0",
     "react-match-media": "^2.0.1",
     "react-modal": "^1.6.5",
