--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-svg": "^2.1.19",
     "react-youtube": "^7.3.0",
     "rebass": "^0.3.4",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "shuffle-array": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
